<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.cart.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/apply_promo_code"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/cart_apply_promo_code"
            android:textColor="@color/shark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/promo_applied"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/black_haze"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/promo_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_half"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/jungle_green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/applied"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ABCuserPromo123" />

            <TextView
                android:id="@+id/applied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/cart_promo_applied"
                android:textColor="@color/jungle_green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remove_promo"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/promo_code"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/remove_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/cart_remove_promo"
                android:src="@drawable/ic_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="apply_promo_code, promo_applied" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/continue_to_checkout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:listitem="@layout/list_view_cart_product"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/basket_icon"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:contentDescription="@string/empty_cart_icon"
            android:src="@drawable/ic_basket"
            app:layout_constraintBottom_toTopOf="@id/empty_cart_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/empty_cart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/cart_empty"
            android:textColor="@color/edward"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/empty_cart_text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/basket_icon" />

        <TextView
            android:id="@+id/empty_cart_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_empty2"
            android:gravity="center_horizontal"
            android:textColor="@color/edward"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/continue_to_shopping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_cart_text" />

        <Button
            android:id="@+id/continue_to_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/cart_continue_to_checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/continue_to_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/cart_continue_shopping"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_cart_text2" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/empty_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            app:constraint_referenced_ids="basket_icon, continue_to_shopping, empty_cart_text, empty_cart_text2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progressContainer"
        layout="@layout/include_progress" />
</FrameLayout>