<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_default"
    >

    <TextView
        android:id="@+id/cart_title"
        android:paddingHorizontal="@dimen/margin_half"
        android:paddingVertical="@dimen/margin_quart"
        android:background="@drawable/bg_cart"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_gravity="center_vertical"
        android:textColor="@color/shark"
        android:importantForAccessibility="yes"
        android:clickable="true"
        android:focusable="true"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Cart (1)" />

</FrameLayout>