...
        android:maxLines="1"
        android:text="@string/item_add_to_cart"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/removeFromCart"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:autoSizeMaxTextSize="12sp"
...
