<resources>
    <string name="app_name">Mobitru</string>
    <string name="login_invite"><![CDATA[Use your unique login & password or simply use biometric authentication.]]></string>
    <string name="login_error">Incorrect email or password</string>
    <string name="form_login">Login</string>
    <string name="form_password">Password</string>
    <string name="form_sign_in">Sign in</string>
    <string name="form_type_and_sign_in">Sign in with correct user</string>
    <string name="login_bio">Biometric authentication</string>
    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_account">Account</string>
    <string name="close">close</string>
    <string name="logout">Logout</string>
    <string name="edit_account">Edit account</string>
    <string name="about_title">About the app</string>
    <string name="edit_account_title">Edit account</string>
    <string name="about_section_general">General</string>
    <string name="account_title">My account</string>
    <string name="menu_about">About the app</string>
    <string name="cart_title">My Cart</string>
    <string name="item_image">Item image</string>
    <string name="item_add_to_cart">Add to cart</string>
    <string name="item_remove_from_cart">Added to cart</string>
    <string name="screen_title_sort_by">Sort by</string>
    <string name="apply">Apply</string>
    <string name="sort_by_price_asc">Price ascending</string>
    <string name="sort_by_price_des">Price descending</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_name_asc">Product name A-Z</string>
    <string name="sort_by_name_des">Product name Z-A</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_change">Change order</string>
    <string name="cart_continue_to_checkout">Continue to checkout</string>
    <string name="cart_continue_shopping">View products</string>
    <string name="cart_apply_promo_code">Apply promo code</string>
    <string name="cart_empty">Cart is empty</string>
    <string name="cart_empty2">There are no products\nadded yet</string>
    <string name="cart_remove_promo">Remove promo</string>
    <string name="fragment_review_order">Review order</string>
    <string name="cart_promo_applied">applied</string>
    <string name="confirm_place_order"><![CDATA[Confirm & place order]]></string>
    <string name="order_item_quantity">Qty: %1$d</string>
    <string name="contact_details">Contact details</string>
    <string name="payment_details">Payment details</string>
    <string name="order_packaging_fee">Packaging fee</string>
    <string name="order_subtotal">Subtotal</string>
    <string name="order_delivery_fee">Delivery fee</string>
    <string name="order_discount">Discount</string>
    <string name="order_total">Total</string>
    <string name="order_completed_title">Order completed</string>
    <string name="edit_profile_invite">Please provide your account details</string>
    <string name="account_first_name">First name</string>
    <string name="account_last_name">Last name</string>
    <string name="account_email">Email</string>
    <string name="edit_save">Save</string>
    <string name="order_completed_text">Order successfully placed. Please check your email.</string>
    <string name="order_go_back_to_products">Go back to products</string>
    <string name="order_done_mark">Done mark</string>
    <string name="order_status_in_progress">In progress</string>
    <string name="order_number_format">Order #%1$s</string>
    <string name="order_count_format">x %1$d</string>
    <string name="empty_cart_icon">Empty cart icon</string>
    <string name="biometric_login_title">Biometric login for Mobitru</string>
    <string name="biometric_login_subtitle">Log in using your biometric credential</string>
    <string name="biometric_login_cancel">Use account password</string>
    <string name="add_item_to_cart_description">Add to cart %1$s</string>
    <string name="remove_item_from_cart_description">Added to cart. Activate to remove %1$s from cart</string>
    <string name="profile_address">Address</string>
    <string name="cart_minus">Minus</string>
    <string name="cart_remove">Remove</string>
    <string name="cart_plus">Plus</string>
    <string name="cart_toolbar_title">Cart (%1$d)</string>
    <string name="product_description_no_discount">Phone image. %1$s. Price: %2$s</string>
    <string name="product_description_discount">Phone image. %1$s. Discount: %2$s. Price: %3$s. Price before: %4$s</string>
    <string name="testuser_mobitru">testuser@mobitru.com</string>
    <string name="testpassword_mobitru">password1</string>
</resources>